--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -31,6 +31,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - name: Build
+        run:  npm run build
       - name: Setup Pages
         uses: actions/configure-pages@v4
       - name: Upload artifact
