--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -31,17 +31,21 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
       - name: Setup Pages
         uses: actions/configure-pages@v4
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
           # Upload entire repository
-          path: './'
+          path: 'dist/'
+
       - name: Install dependencies & build
         run: |
           npm ci
           npm run build
+
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
