--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,11 @@
         "editor.wordWrap": "wordWrapColumn",
         "editor.wordWrapColumn": 240,
         "editor.lineNumbers": "off",
-        "editor.quickSuggestions": false,
+        "editor.quickSuggestions": {
+            "comments": "off",
+            "strings": "off",
+            "other": "off"
+        },
         "editor.minimap.enabled": false
     },
     "editor.wordWrap": "on",
