--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,6 @@
         },
         "editor.minimap.enabled": false
     },
-    "editor.wordWrap": "on",
-    "editor.wordWrapColumn": 240
+    "editor.wordWrap": "wordWrapColumn",
+    "editor.wordWrapColumn": 180
 }
