Update Uses page

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,9 @@
         },
         "editor.minimap.enabled": false
     },
-    "editor.wordWrap": "wordWrapColumn",
-    "editor.wordWrapColumn": 80
+    "editor.wordWrap": "on",
+    "editor.wordWrapColumn": 80,
+    "diffEditor.wordWrap": "on",
+    "notebook.output.wordWrap": true,
+    "chat.editor.wordWrap": "on"
 }
